# OOP_MAI_Slobodin

./: CMakeLists.txt  README.md  main.cpp
include/: Five.h  figure.h  figure_array.h  pentagon.h  rhombus.h  swap.h  trapezoid.h
src/: Five.cpp  figure.cpp  figure_array.cpp  pentagon.cpp  rhombus.cpp  swap.cpp  trapezoid.cpp
test/: tests01.cpp
